Minor changes based on IntelliJ code analysis: - changed C-style array declaration - replaced String.concat() calls with '+' - changed expression.equals("literal") to "literal".equals(expression) - replaced indexOf() expressions to contains() where possible - removed unnecessary semicolon - clean up some unused or redundant imports - Used more Java 1.5: - replaced Collections.EMPTY_* with Collections.empty*() - replaced some for loops with for each loops - removed unnecessary boxing and unboxing - reduced zero-length array allocations - removed manual array to collection copy - removed redundant String.toString() calls - replaced size()==0 with isEmpty() - chandeg string concatenation inside StringBuilder.append() calls - changed single character string arguments to simple single characters ("." -> '.') - replaced string.equals("") with string.length()==0 - removed unnecesssary temporary object in converion from string - simplified var-arg method calls - removed some redundant array creations and type casts